[gd_scene load_steps=19 format=3 uid="uid://753hfb0jp4xu"]

[ext_resource type="Script" uid="uid://dpbt5jid66xwx" path="res://Assets/sequencer/sequencer.gd" id="1_2828x"]
[ext_resource type="PackedScene" uid="uid://d32scr7lfh4bf" path="res://Assets/sequencer/button.tscn" id="1_uhqqe"]
[ext_resource type="Texture2D" uid="uid://cfd1b87786ywu" path="res://Assets/Placeholder/Case_Capacites.png" id="2_13qdt"]
[ext_resource type="Texture2D" uid="uid://dcg108xpr6qtq" path="res://Assets/Placeholder/Icon_Jump.png" id="3_0xvyw"]
[ext_resource type="Texture2D" uid="uid://cibagvne3fshn" path="res://Assets/Placeholder/Icon_Dash.png" id="4_1hjla"]
[ext_resource type="Texture2D" uid="uid://bkbhwvx66e7r5" path="res://Assets/Placeholder/Icon_Gravite.png" id="5_sewa6"]
[ext_resource type="Texture2D" uid="uid://7d3ldgn4y0d2" path="res://Assets/Placeholder/Icon_RotateRoom.png" id="6_wqqe1"]
[ext_resource type="Texture2D" uid="uid://c4v3528wn5cle" path="res://UI/Images/FullscreenBackgroundV10.png" id="7_kvxoe"]
[ext_resource type="PackedScene" uid="uid://46gsuqj43ym3" path="res://Assets/sequencer/start_button.tscn" id="9_njel3"]
[ext_resource type="FontFile" uid="uid://frfsgfg3c8u7" path="res://Assets/Font_Pixel_v1.ttf" id="10_1hjla"]
[ext_resource type="AudioStream" uid="uid://dwiwkmji00g36" path="res://Assets/audio/metronome.mp3" id="10_sewa6"]
[ext_resource type="PackedScene" uid="uid://nyx5hb1sahu6" path="res://Assets/sequencer/view_button.tscn" id="10_wqqe1"]
[ext_resource type="Texture2D" uid="uid://cacayaykjkvk4" path="res://Assets/Placeholder/Case_Stop.png" id="13_m6nqx"]
[ext_resource type="Script" uid="uid://csgayqufw8fe6" path="res://Assets/sequencer/LevelButtonsControl.gd" id="14_kvxoe"]
[ext_resource type="Texture2D" uid="uid://cmv71pxqlsr6l" path="res://UI/Images/EXISTBUTTON.png" id="14_xhjb5"]
[ext_resource type="Texture2D" uid="uid://j6m5obqq00g0" path="res://UI/Images/LevelButtonImgBeforeAnimation.png" id="15_3v1ao"]
[ext_resource type="Script" uid="uid://bmqhdp2gsjx64" path="res://Assets/sequencer/exit_button.gd" id="15_gmqqg"]
[ext_resource type="Script" uid="uid://c13ggw7m5uyx1" path="res://Assets/sequencer/levelButton.gd" id="16_xhjb5"]

[node name="sequencer" type="Node2D" groups=["button_manager"]]
position = Vector2(0, 6)
script = ExtResource("1_2828x")
capacity_texture_list = Array[Texture2D]([ExtResource("2_13qdt"), ExtResource("3_0xvyw"), ExtResource("4_1hjla"), ExtResource("5_sewa6"), ExtResource("6_wqqe1")])

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(480, 264)
texture = ExtResource("7_kvxoe")

[node name="screenshot" type="Sprite2D" parent="Sprite2D"]
visible = false

[node name="Button" parent="." instance=ExtResource("1_uhqqe")]
position = Vector2(259, 479)

[node name="Button2" parent="." instance=ExtResource("1_uhqqe")]
position = Vector2(322, 479)

[node name="Button3" parent="." instance=ExtResource("1_uhqqe")]
position = Vector2(385, 479)

[node name="Button4" parent="." instance=ExtResource("1_uhqqe")]
position = Vector2(448, 479)

[node name="Button5" parent="." instance=ExtResource("1_uhqqe")]
position = Vector2(511, 479)

[node name="Button6" parent="." instance=ExtResource("1_uhqqe")]
position = Vector2(574, 479)

[node name="Button7" parent="." instance=ExtResource("1_uhqqe")]
position = Vector2(637, 479)

[node name="Button8" parent="." instance=ExtResource("1_uhqqe")]
position = Vector2(700, 479)

[node name="start_button" parent="." instance=ExtResource("9_njel3")]
position = Vector2(277, 82)

[node name="view_button" parent="." instance=ExtResource("10_wqqe1")]
position = Vector2(348, 81)

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0

[node name="metronom" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_sewa6")
volume_db = 8.0
max_polyphony = 2
bus = &"SFX"

[node name="Labels" type="Node2D" parent="."]

[node name="BPM_label" type="Label" parent="Labels" groups=["UI_Label"]]
offset_left = 602.0
offset_top = 66.0
offset_right = 644.0
offset_bottom = 89.0
theme_override_colors/font_shadow_color = Color(0.223529, 0.223529, 0.207843, 1)
theme_override_fonts/font = ExtResource("10_1hjla")
text = "BPM :"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NBRjump_label" type="Label" parent="Labels" groups=["UI_Label"]]
offset_left = 827.0
offset_top = 119.0
offset_right = 867.0
offset_bottom = 142.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.223529, 0.223529, 0.207843, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("10_1hjla")
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NBRdash_label" type="Label" parent="Labels" groups=["UI_Label"]]
offset_left = 827.0
offset_top = 189.0
offset_right = 867.0
offset_bottom = 212.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.223529, 0.223529, 0.207843, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("10_1hjla")
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NBRgravity_label" type="Label" parent="Labels" groups=["UI_Label"]]
offset_left = 828.0
offset_top = 259.0
offset_right = 868.0
offset_bottom = 282.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.223529, 0.223529, 0.207843, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("10_1hjla")
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NBRrotate_label" type="Label" parent="Labels" groups=["UI_Label"]]
offset_left = 828.0
offset_top = 329.0
offset_right = 868.0
offset_bottom = 352.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.223529, 0.223529, 0.207843, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("10_1hjla")
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="music" type="AudioStreamPlayer2D" parent="."]
bus = &"Main Music"

[node name="CaseStop" type="Sprite2D" parent="." groups=["pause_button"]]
visible = false
position = Vector2(276, 81)
texture = ExtResource("13_m6nqx")

[node name="ExitButton" type="Button" parent="."]
offset_left = 101.0
offset_top = -15.0
offset_right = 205.0
offset_bottom = 90.0
icon = ExtResource("14_xhjb5")
flat = true
script = ExtResource("15_gmqqg")

[node name="LevelManager" type="Node2D" parent="."]
script = ExtResource("14_kvxoe")

[node name="ButtonNiveau1" type="Button" parent="LevelManager"]
offset_left = 31.0
offset_top = 105.0
offset_right = 103.0
offset_bottom = 177.0
scale = Vector2(0.685, 0.685)
focus_mode = 0
icon = ExtResource("15_3v1ao")
flat = true
script = ExtResource("16_xhjb5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LevelManager/ButtonNiveau1"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0416667
anchor_right = -0.0416667
offset_left = 61.0
offset_top = 33.0
offset_right = 101.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_1hjla")
text = "01"
metadata/_edit_use_anchors_ = true

[node name="ButtonNiveau2" type="Button" parent="LevelManager"]
offset_left = 81.0
offset_top = 105.0
offset_right = 153.0
offset_bottom = 177.0
scale = Vector2(0.685, 0.685)
focus_mode = 0
icon = ExtResource("15_3v1ao")
flat = true
script = ExtResource("16_xhjb5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LevelManager/ButtonNiveau2"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0416667
anchor_right = -0.0416667
offset_left = 61.0
offset_top = 33.0
offset_right = 101.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_1hjla")
text = "02"
metadata/_edit_use_anchors_ = true

[node name="ButtonNiveau3" type="Button" parent="LevelManager"]
offset_left = 130.0
offset_top = 106.0
offset_right = 202.0
offset_bottom = 178.0
scale = Vector2(0.685, 0.685)
focus_mode = 0
icon = ExtResource("15_3v1ao")
flat = true
script = ExtResource("16_xhjb5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LevelManager/ButtonNiveau3"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0416667
anchor_right = -0.0416667
offset_left = 61.0
offset_top = 33.0
offset_right = 101.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_1hjla")
text = "03"
metadata/_edit_use_anchors_ = true

[node name="ButtonNiveau4" type="Button" parent="LevelManager"]
offset_left = 31.0
offset_top = 155.0
offset_right = 103.0
offset_bottom = 227.0
scale = Vector2(0.685, 0.685)
focus_mode = 0
icon = ExtResource("15_3v1ao")
flat = true
script = ExtResource("16_xhjb5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LevelManager/ButtonNiveau4"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0416667
anchor_right = -0.0416667
offset_left = 61.0
offset_top = 33.0
offset_right = 101.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_1hjla")
text = "XX"
metadata/_edit_use_anchors_ = true

[node name="ButtonNiveau5" type="Button" parent="LevelManager"]
offset_left = 81.0
offset_top = 156.0
offset_right = 153.0
offset_bottom = 228.0
scale = Vector2(0.685, 0.685)
focus_mode = 0
icon = ExtResource("15_3v1ao")
flat = true
script = ExtResource("16_xhjb5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LevelManager/ButtonNiveau5"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0416667
anchor_right = -0.0416667
offset_left = 61.0
offset_top = 33.0
offset_right = 101.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_1hjla")
text = "XX"
metadata/_edit_use_anchors_ = true

[node name="ButtonNiveau6" type="Button" parent="LevelManager"]
offset_left = 131.0
offset_top = 157.0
offset_right = 203.0
offset_bottom = 229.0
scale = Vector2(0.685, 0.685)
focus_mode = 0
icon = ExtResource("15_3v1ao")
flat = true
script = ExtResource("16_xhjb5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LevelManager/ButtonNiveau6"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0416667
anchor_right = -0.0416667
offset_left = 61.0
offset_top = 33.0
offset_right = 101.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_1hjla")
text = "XX"
metadata/_edit_use_anchors_ = true

[node name="ButtonNiveau7" type="Button" parent="LevelManager"]
offset_left = 32.0
offset_top = 206.0
offset_right = 104.0
offset_bottom = 278.0
scale = Vector2(0.685, 0.685)
focus_mode = 0
icon = ExtResource("15_3v1ao")
flat = true
script = ExtResource("16_xhjb5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LevelManager/ButtonNiveau7"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0416667
anchor_right = -0.0416667
offset_left = 61.0
offset_top = 33.0
offset_right = 101.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_1hjla")
text = "XX"
metadata/_edit_use_anchors_ = true

[node name="ButtonNiveau8" type="Button" parent="LevelManager"]
offset_left = 82.0
offset_top = 206.0
offset_right = 154.0
offset_bottom = 278.0
scale = Vector2(0.685, 0.685)
focus_mode = 0
icon = ExtResource("15_3v1ao")
flat = true
script = ExtResource("16_xhjb5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LevelManager/ButtonNiveau8"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0416667
anchor_right = -0.0416667
offset_left = 61.0
offset_top = 33.0
offset_right = 101.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_1hjla")
text = "XX"
metadata/_edit_use_anchors_ = true

[node name="ButtonNiveau9" type="Button" parent="LevelManager"]
offset_left = 133.0
offset_top = 207.0
offset_right = 205.0
offset_bottom = 279.0
scale = Vector2(0.685, 0.685)
focus_mode = 0
icon = ExtResource("15_3v1ao")
flat = true
script = ExtResource("16_xhjb5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LevelManager/ButtonNiveau9"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0416667
anchor_right = -0.0416667
offset_left = 61.0
offset_top = 33.0
offset_right = 101.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_1hjla")
text = "XX"
metadata/_edit_use_anchors_ = true

[node name="ButtonNiveau10" type="Button" parent="LevelManager"]
offset_left = 32.0
offset_top = 259.0
offset_right = 104.0
offset_bottom = 331.0
scale = Vector2(0.685, 0.685)
focus_mode = 0
icon = ExtResource("15_3v1ao")
flat = true
script = ExtResource("16_xhjb5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LevelManager/ButtonNiveau10"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0416667
anchor_right = -0.0416667
offset_left = 61.0
offset_top = 33.0
offset_right = 101.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_1hjla")
text = "XX"
metadata/_edit_use_anchors_ = true

[node name="ButtonNiveau11" type="Button" parent="LevelManager"]
offset_left = 84.0
offset_top = 259.0
offset_right = 156.0
offset_bottom = 331.0
scale = Vector2(0.685, 0.685)
focus_mode = 0
icon = ExtResource("15_3v1ao")
flat = true
script = ExtResource("16_xhjb5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LevelManager/ButtonNiveau11"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0416667
anchor_right = -0.0416667
offset_left = 61.0
offset_top = 33.0
offset_right = 101.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_1hjla")
text = "XX"
metadata/_edit_use_anchors_ = true

[node name="ButtonNiveau12" type="Button" parent="LevelManager"]
offset_left = 134.0
offset_top = 259.0
offset_right = 206.0
offset_bottom = 331.0
scale = Vector2(0.685, 0.685)
focus_mode = 0
icon = ExtResource("15_3v1ao")
flat = true
script = ExtResource("16_xhjb5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LevelManager/ButtonNiveau12"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0416667
anchor_right = -0.0416667
offset_left = 61.0
offset_top = 33.0
offset_right = 101.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_1hjla")
text = "XX"
metadata/_edit_use_anchors_ = true

[node name="ButtonNiveau13" type="Button" parent="LevelManager"]
offset_left = 32.0
offset_top = 311.0
offset_right = 104.0
offset_bottom = 383.0
scale = Vector2(0.685, 0.685)
focus_mode = 0
icon = ExtResource("15_3v1ao")
flat = true
script = ExtResource("16_xhjb5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LevelManager/ButtonNiveau13"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0416667
anchor_right = -0.0416667
offset_left = 61.0
offset_top = 33.0
offset_right = 101.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_1hjla")
text = "XX"
metadata/_edit_use_anchors_ = true

[node name="ButtonNiveau14" type="Button" parent="LevelManager"]
offset_left = 86.0
offset_top = 311.0
offset_right = 158.0
offset_bottom = 383.0
scale = Vector2(0.685, 0.685)
focus_mode = 0
icon = ExtResource("15_3v1ao")
flat = true
script = ExtResource("16_xhjb5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LevelManager/ButtonNiveau14"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0416667
anchor_right = -0.0416667
offset_left = 61.0
offset_top = 33.0
offset_right = 101.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_1hjla")
text = "XX"
metadata/_edit_use_anchors_ = true

[node name="ButtonNiveau15" type="Button" parent="LevelManager"]
offset_left = 136.0
offset_top = 311.0
offset_right = 208.0
offset_bottom = 383.0
scale = Vector2(0.685, 0.685)
focus_mode = 0
icon = ExtResource("15_3v1ao")
flat = true
script = ExtResource("16_xhjb5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LevelManager/ButtonNiveau15"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0416667
anchor_right = -0.0416667
offset_left = 61.0
offset_top = 33.0
offset_right = 101.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_1hjla")
text = "XX"
metadata/_edit_use_anchors_ = true

[node name="ButtonNiveau16" type="Button" parent="LevelManager"]
offset_left = 33.0
offset_top = 364.0
offset_right = 105.0
offset_bottom = 436.0
scale = Vector2(0.685, 0.685)
focus_mode = 0
icon = ExtResource("15_3v1ao")
flat = true
script = ExtResource("16_xhjb5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LevelManager/ButtonNiveau16"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0416667
anchor_right = -0.0416667
offset_left = 61.0
offset_top = 33.0
offset_right = 101.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_1hjla")
text = "XX"
metadata/_edit_use_anchors_ = true

[node name="ButtonNiveau17" type="Button" parent="LevelManager"]
offset_left = 87.0
offset_top = 364.0
offset_right = 159.0
offset_bottom = 436.0
scale = Vector2(0.685, 0.685)
focus_mode = 0
icon = ExtResource("15_3v1ao")
flat = true
script = ExtResource("16_xhjb5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="LevelManager/ButtonNiveau17"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0416667
anchor_right = -0.0416667
offset_left = 61.0
offset_top = 33.0
offset_right = 101.0
offset_bottom = 56.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("10_1hjla")
text = "XX"
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="button_down" from="ExitButton" to="ExitButton" method="_on_button_down"]
[connection signal="mouse_entered" from="ExitButton" to="ExitButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ExitButton" to="ExitButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelManager/ButtonNiveau1" to="LevelManager/ButtonNiveau1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelManager/ButtonNiveau1" to="LevelManager/ButtonNiveau1" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelManager/ButtonNiveau2" to="LevelManager/ButtonNiveau2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelManager/ButtonNiveau2" to="LevelManager/ButtonNiveau2" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelManager/ButtonNiveau3" to="LevelManager/ButtonNiveau3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelManager/ButtonNiveau3" to="LevelManager/ButtonNiveau3" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelManager/ButtonNiveau4" to="LevelManager/ButtonNiveau4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelManager/ButtonNiveau4" to="LevelManager/ButtonNiveau4" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelManager/ButtonNiveau5" to="LevelManager/ButtonNiveau5" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelManager/ButtonNiveau5" to="LevelManager/ButtonNiveau5" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelManager/ButtonNiveau6" to="LevelManager/ButtonNiveau6" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelManager/ButtonNiveau6" to="LevelManager/ButtonNiveau6" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelManager/ButtonNiveau7" to="LevelManager/ButtonNiveau7" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelManager/ButtonNiveau7" to="LevelManager/ButtonNiveau7" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelManager/ButtonNiveau8" to="LevelManager/ButtonNiveau8" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelManager/ButtonNiveau8" to="LevelManager/ButtonNiveau8" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelManager/ButtonNiveau9" to="LevelManager/ButtonNiveau9" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelManager/ButtonNiveau9" to="LevelManager/ButtonNiveau9" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelManager/ButtonNiveau10" to="LevelManager/ButtonNiveau10" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelManager/ButtonNiveau10" to="LevelManager/ButtonNiveau10" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelManager/ButtonNiveau11" to="LevelManager/ButtonNiveau11" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelManager/ButtonNiveau11" to="LevelManager/ButtonNiveau11" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelManager/ButtonNiveau12" to="LevelManager/ButtonNiveau12" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelManager/ButtonNiveau12" to="LevelManager/ButtonNiveau12" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelManager/ButtonNiveau13" to="LevelManager/ButtonNiveau13" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelManager/ButtonNiveau13" to="LevelManager/ButtonNiveau13" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelManager/ButtonNiveau14" to="LevelManager/ButtonNiveau14" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelManager/ButtonNiveau14" to="LevelManager/ButtonNiveau14" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelManager/ButtonNiveau15" to="LevelManager/ButtonNiveau15" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelManager/ButtonNiveau15" to="LevelManager/ButtonNiveau15" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelManager/ButtonNiveau16" to="LevelManager/ButtonNiveau16" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelManager/ButtonNiveau16" to="LevelManager/ButtonNiveau16" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelManager/ButtonNiveau17" to="LevelManager/ButtonNiveau17" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelManager/ButtonNiveau17" to="LevelManager/ButtonNiveau17" method="_on_mouse_exited"]
